--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,25 @@
 <html lang="en">
 <head>
     <title>RUNAR App</title>
+    <!-- Chart.js FILE -->
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <h1>Old Header</h1>
+        <h1>Header</h1>
         <h3>Subheader goes here</h3>
     </header>
-    <div>
-        <!-- Main Content Area -->
-        <h2>Main Content</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc eu dictum tincidunt, lorem ligula aliquam tortor.</p>
-    </div>
+    <div class="container">
+        <div class="row">
+            <!-- Main Content Area -->
+            <h2>Main Content</h2>
+            <canvas id="first-canvas"></canvas>
 
+        </div>
+    </div>
+    <script src="{{ url_for('static', filename='js/my_first_graph.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
