--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <!-- Chart.js FILE -->
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/87f255315c.js" crossorigin="anonymous"></script>
+    
     {% endblock %}
 
 </head>
