--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block head %}
+    {{ super() }}
+    <link href="{{ url_for('static', filename='css/index.css') }}" rel="stylesheet">
+{% endblock %}
+
 
 {% block header %}
     {{ super() }}
@@ -21,10 +26,29 @@
             <canvas id="second-canvas"></canvas>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12">
+            <table id="last-five" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Name</th>
+                        <th>Tag</th>
+                        <th>Distance</th>
+                        <th>Elapsed</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="last-five-body">
+
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
     {{ super() }}
     <script src="{{ url_for('static', filename='js/my_first_graph.js') }}"></script>
-    <!-- <script src="{{ url_for('static', filename='js/my_second_graph.js') }}"></script> -->
+    <script src="{{ url_for('static', filename='js/last_five.js') }}"></script>
 {% endblock %}
