--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,10 @@
 
 </head>
 <body>
-    <header>
-        {% block header %}
-        {% endblock %}
-    </header>
+
+    {% block navbar %}
+    {% endblock %}
+
     <div class="container">
         {% block content %}
         {% endblock %}
