--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,32 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-stacked100@1.0.0"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/87f255315c.js" crossorigin="anonymous"></script>
+    <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
     
     {% endblock %}
 
 </head>
 <body>
 
-    {% block navbar %}
-    {% endblock %}
+    <nav id="runar-nav" class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img id="nav-logo" src="{{ url_for('static', filename='svg/path1.svg')}}" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            RUNAR 
+        </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link {{ g.mc['home'] }}" aria-current="page" href="/">Home</a>
+              <a class="nav-link {{ g.mc['intervals'] }}" href="/intervals">Intervals</a>
+              <a class="nav-link disabled" href="/races">Races</a>
+              <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+            </div>
+          </div>
+        </div>
+      </nav>
 
     <div class="container">
         {% block content %}
